SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Criteria_Group__c/fields/CPQ_Playbook_Proposal_Section__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Proposal_Section__c</fullName>
    <description>CPQ Playbook Propsal Section in which the Criteria Group is evaluated</description>
    <inlineHelpText>Playbook Propsal Section in which the group is evaluated</inlineHelpText>
    <label>CPQ Playbook Proposal Section</label>
    <referenceTo>CPQ_Playbook_Proposal_Section__c</referenceTo>
    <relationshipLabel>CPQ Playbook Proposal Criteria Groups</relationshipLabel>
    <relationshipName>CPQ_Playbook_Proposal_Criteria_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>