SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Criteria_Group__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if group is active and should be evaluated in proposal section</description>
    <inlineHelpText>Determines if group is active and should be evaluated in proposal section</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>