SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Criteria_Group__c/fields/N__c.field-meta.xml
<CustomField>
    <fullName>N__c</fullName>
    <description>Number of groups that relate to the Evaluation Logic value (1 N value per N logic option selected in proposal section)</description>
    <inlineHelpText>Number of groups that relate to the Evaluation Logic value (1 N value per N logic option selected in proposal section)</inlineHelpText>
    <label>N</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>